--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
+  "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
