--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "3.0.1"
   },
   "engines": {
-    "node": "6.11.1"
+    "node": "10.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "react-scripts start",
